[package]
name = "edge-cdn-store"
version = "0.1.0"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2024"
repository = "https://github.com/ChrisWhealy/edge-cdn-store"
categories = ["caching"]

[dependencies]
async-trait = "0.1"
bytes = "1.10"
mime_guess = "2.0"
pingora-cache = "0.6"
pingora-core = "0.6"
pingora-error = "0.6"
pingora = { version = "0.6", features = ["proxy", "cache", "rustls"] }
prometheus = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2.1"
warp = { version = "0.4", features = ["server"] }
futures-util = "0.3.31"
